Some Javadocs. Separating main and test checkstyle. Using IllegalArgumentException for @NonNull. Several fixes in gradle configuration. SpotBugs working. Fixed SpotBugs issues. Reworking of Connector class. Output encoding in build.bat. Temporarily disabling Javadoc generation due to a problem with lombok.