@@ -9,12 +9,12 @@ plugins {
 
 group = "ninja.javahacker"
 version = "0.4.0"
-String artifactBaseName = "jpa-simple-transactions"
+ext.artifactBaseName = "jpa-simple-transactions"
+ext.moduleName = "ninja.javahacker.jpasimpletransactions"
 
 ext.javaCompiler = "1.9"
 ext.doclint = false
 ext.extraCompilerArgs = [
-    "--add-modules", "java.xml.ws.annotation",
     "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
     "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
     "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
@@ -28,13 +28,14 @@ ext.extraCompilerArgs = [
 
 ext.versionApiguardian = "1.0.0"
 ext.versionCheckstyle = "8.12"
+ext.versionFbContrib = "7.4.3.sb"
 ext.versionFindSecBugs = "1.8.0"
 ext.versionJaCoCo = "0.8.1"
 ext.versionJcip = "1.0"
 ext.versionJpa = "2.2"
 ext.versionJunit = "5.3.0-RC1"
 ext.versionJsr305 = "3.0.2"
-ext.versionLombok = "1.18.2" //"edge"
+ext.versionLombok = "edge"
 ext.versionPmd = "6.6.0"
 ext.versionReifiedGenerics = version
 ext.versionSpotBugs = "3.1.6"
@@ -42,20 +43,20 @@ ext.versionSpotBugs = "3.1.6"
 dependencies {
 
     // JPA
-    api group: 'javax.persistence', name: 'javax.persistence-api', version: "${versionJpa}"
+    api group: 'javax.persistence', name: 'javax.persistence-api', version: versionJpa
 
     // JUnit
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${versionJunit}"
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "${versionJunit}"
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: "${versionJunit}"
-    testCompileOnly group: 'org.apiguardian', name: 'apiguardian-api', version: "${versionApiguardian}"
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versionJunit
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versionJunit
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versionJunit
+    testCompileOnly group: 'org.apiguardian', name: 'apiguardian-api', version: versionApiguardian
 
     // Lombok
     if (versionLombok != "edge") {
-        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${versionLombok}"
-        compileOnly group: 'org.projectlombok', name: 'lombok', version: "${versionLombok}"
-        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${versionLombok}"
-        testCompileOnly group: 'org.projectlombok', name: 'lombok', version: "${versionLombok}"
+        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versionLombok
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: versionLombok
+        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versionLombok
+        testCompileOnly group: 'org.projectlombok', name: 'lombok', version: versionLombok
     } else {
         annotationProcessor files("libs/lombok-edge.jar")
         compileOnly files("libs/lombok-edge.jar")
@@ -64,21 +65,19 @@ dependencies {
     }
 
     // PMD
-    compileOnly group: 'net.sourceforge.pmd', name: 'pmd', version: "${versionPmd}"
-    testCompileOnly group: 'net.sourceforge.pmd', name: 'pmd', version: "${versionPmd}"
+    compileOnly group: 'net.sourceforge.pmd', name: 'pmd', version: versionPmd
+    testCompileOnly group: 'net.sourceforge.pmd', name: 'pmd', version: versionPmd
 
     // Reified-Generics
-    api group: 'ninja.javahacker', name: 'reified-generic', version: "${versionReifiedGenerics}"
+    api group: 'ninja.javahacker', name: 'reified-generic', version: versionReifiedGenerics
 
-    // SpotBugs + Find Security Bugs
-    compileOnly group: 'com.h3xstream.findsecbugs', name: 'findsecbugs-plugin', version: "${versionFindSecBugs}"
-    compileOnly group: 'net.jcip', name: 'jcip-annotations', version: "${versionJcip}"
-    compileOnly group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: "${versionSpotBugs}"
-    compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: "${versionJsr305}"
-    testCompileOnly group: 'com.h3xstream.findsecbugs', name: 'findsecbugs-plugin', version: "${versionFindSecBugs}"
-    testCompileOnly group: 'net.jcip', name: 'jcip-annotations', version: "${versionJcip}"
-    testCompileOnly group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: "${versionSpotBugs}"
-    testCompileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: "${versionJsr305}"
+    // SpotBugs + plugins
+    spotbugs group: 'com.github.spotbugs', name: 'spotbugs', version :versionSpotBugs
+    spotbugs configurations.spotbugsPlugins.dependencies
+    api group: 'net.jcip', name: 'jcip-annotations', version: versionJcip
+    api group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: versionSpotBugs
+    spotbugsPlugins group: 'com.h3xstream.findsecbugs', name: 'findsecbugs-plugin', version: versionFindSecBugs
+    spotbugsPlugins group: 'com.mebigfatguy.fb-contrib', name: 'fb-contrib', version: versionFbContrib
 }
 
 println "Using Java " + org.gradle.api.JavaVersion.current() + "."
@@ -103,16 +102,41 @@ tasks.withType(JavaCompile) {
     extraCompilerArgs.each { e -> options.compilerArgs << e }
 }
 
-tasks.withType(Javadoc) {
+/*task delombok {
+    description 'Delomboks the source code'
+    ant.taskdef(classname: 'lombok.delombok.ant.Tasks$Delombok', classpath: configurations.compileOnly.asPath, name: 'delombok')
+    ant.mkdir(dir: 'build/src-delomboked') 
+    ant.delombok(verbose: 'true', encoding: 'UTF-8', to: 'build/src-delomboked', from: 'src/main/java')
+}*/
+
+/*tasks.withType(Javadoc) {
+    //dependsOn delombok
+    sourceSets {
+        main {
+            java {
+                srcDirs = ['build/src-delomboked']
+            }
+            resources {
+                srcDirs = ['src/resources']
+            }
+        }
+    }
     options.encoding = "UTF-8"
     options.docEncoding = "UTF-8"
     options.addBooleanOption('html5', true)
     options.tags = ["apiNote:a:API Note:", "implSpec:a:Implementation Requirements:", "implNote:a:Implementation Note:"]
+}*/
+
+checkstyleMain {
+    configFile = rootProject.file("config/checkstyle/main.xml")
+}
+
+checkstyleTest {
+    configFile = rootProject.file("config/checkstyle/test.xml")
 }
 
 checkstyle {
-    toolVersion = "${versionCheckstyle}"
-    configFile = rootProject.file("config/checkstyle/checkstyle.xml")
+    toolVersion = versionCheckstyle
     configProperties = [
         "checkstyle.cache.file": "${buildDir}/checkstyle.cache",
     ]
@@ -121,10 +145,11 @@ checkstyle {
 }
 
 spotbugs {
-    toolVersion = "${versionSpotBugs}"
+    toolVersion = versionSpotBugs
 }
 
 tasks.withType(com.github.spotbugs.SpotBugsTask) {
+    pluginClasspath = project.configurations.spotbugsPlugins
     reports {
         xml.enabled = false
         html.enabled = true
@@ -134,9 +159,9 @@ tasks.withType(com.github.spotbugs.SpotBugsTask) {
 jar {
     baseName = artifactBaseName
     duplicatesStrategy = "exclude"
-    inputs.property("moduleName", "${group}.${baseName}")
+    inputs.property("moduleName", moduleName)
     manifest {
-        attributes("Automatic-Module-Name": "${group}.${baseName}")
+        attributes("Automatic-Module-Name": moduleName)
     }
 }
 
@@ -145,17 +170,17 @@ task sourcesJar(type: Jar) {
     classifier "sources"
 }
 
-task javadocJar(type: Jar) {
+/*task javadocJar(type: Jar) {
     from javadoc
     classifier "javadoc"
-}
+}*/
 
 test {
     useJUnitPlatform()
 }
 
 jacoco {
-    toolVersion = "${versionJaCoCo}"
+    toolVersion = versionJaCoCo
 }
 
 jacocoTestReport {
@@ -172,7 +197,7 @@ publishing {
             artifactId jar.baseName
             from components.java
             artifact sourcesJar
-            artifact javadocJar
+            //artifact javadocJar
             pom {
                 developers {
                     developer {
